--- a/gb/17/1/25/n8744097.md
+++ b/gb/17/1/25/n8744097.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>傅雷之死──文化名人的文革厄运</h2>
-<a href="https://git.io/JvPSw"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dol9bue5bysdj.cloudfront.net/M9tcRtEKi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-<p>【大纪元2017年01月25日讯】岁月的风，从远方吹来，拂过译者的生花妙笔，倾听家书的娓娓述说，卷起彼时的创伤悲鸣。曾经，花香琴朗情长在。今日，人去楼空怨难平。</p>
-<p>上海江苏路284弄，现名“安定坊”，位于江苏路和愚园路的路口。这里有五组18幢欧式花园住宅，建于1936年，是沪上白领及中上层知识份子居住的社区，其中5号洋房是著名翻译家<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%82%85%E9%9B%B7.md#1">傅雷</a>的故居。那是一幢三层楼的建筑，米黄色的墙身，淡雅古朴，细碎的鹅卵石嵌在外墙的墙面，透着温润和别致。红顶斜披，门窗都带拱券。底楼南面，有一个100多平方米的大花园，是一家人拍照的好地点。就在那个“世外桃源”，傅雷种植了50多种月季。他喜欢徜徉于花丛，静享花趣。</p>
-<p>1966年8月30日的夜晚，一群红卫兵闯进了他的领地，四处搜寻“变天罪证”，把他精心培育的月季一株株连根拔掉，也拔掉了他最后的希望。9月2日早晨，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%82%85%E9%9B%B7.md#1">傅雷</a>和夫人朱梅馥被拖到家门前，被迫站到凳子上，头戴高帽，任人指点羞辱。连续四天三夜的批斗，似无尽头。于是，他必须走了。因为士可杀，不可辱。</p>
-<figure id="attachment_8744183" style="width: 357px" class="wp-caption aligncenter"><img class="size-full wp-image-8744183" src="https://i.epochtimes.com/assets/uploads/2017/01/2.png-e1485329775825.jpg" alt="傅雷夫妇在江苏路宅邸书房内。（1965年8月）（网路图片）" width="357" b="236" /><figcaption class="wp-caption-text">傅雷夫妇在江苏路宅邸书房内。（1965年8月）（网路图片）</figcaption></figure>
+	<p>【大纪元2017年01月25日讯】岁月的风，从远方吹来，拂过译者的生花妙笔，倾听家书的娓娓述说，卷起彼时的创伤悲鸣。曾经，花香琴朗情长在。今日，人去楼空怨难平。</p>
+<p>上海江苏路284弄，现名“安定坊”，位于江苏路和愚园路的路口。这里有五组18幢欧式花园住宅，建于1936年，是沪上白领及中上层知识份子居住的社区，其中5号洋房是著名翻译家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%82%85%E9%9B%B7.md#1">傅雷</a>的故居。那是一幢三层楼的建筑，米黄色的墙身，淡雅古朴，细碎的鹅卵石嵌在外墙的墙面，透着温润和别致。红顶斜披，门窗都带拱券。底楼南面，有一个100多平方米的大花园，是一家人拍照的好地点。就在那个“世外桃源”，傅雷种植了50多种月季。他喜欢徜徉于花丛，静享花趣。</p>
+<p>1966年8月30日的夜晚，一群红卫兵闯进了他的领地，四处搜寻“变天罪证”，把他精心培育的月季一株株连根拔掉，也拔掉了他最后的希望。9月2日早晨，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%82%85%E9%9B%B7.md#1">傅雷</a>和夫人朱梅馥被拖到家门前，被迫站到凳子上，头戴高帽，任人指点羞辱。连续四天三夜的批斗，似无尽头。于是，他必须走了。因为士可杀，不可辱。</p>
+<figure id="attachment_8744183" aria-describedby="caption-attachment-8744183" style="width: 357px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/01/2.png-e1485329775825.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8744183" src="https://i.epochtimes.com/assets/uploads/2017/01/2.png-e1485329775825.jpg" alt="傅雷夫妇在江苏路宅邸书房内。（1965年8月）（网路图片）" width="357" b="236" /></a><figcaption id="caption-attachment-8744183" class="wp-caption-text">傅雷夫妇在江苏路宅邸书房内。（1965年8月）（网路图片）</figcaption></figure>
 <p><strong>一介奇才</strong></p>
 <p>傅雷，字怒安，号怒庵，是中国著名的翻译家、文艺评论家，兼通文史哲音乐。傅雷一生翻译了34部文学著作，15卷的《傅雷译文集》共计约500万字，其中多为法国文豪巴尔扎克和罗曼·罗兰的作品。有人赞誉：没有傅雷，就没有巴尔扎克在中国。</p>
 <p>傅雷于1908年出生于上海南汇县傅家宅。1928年，傅雷留学法国巴黎大学，学习艺术理论。1931年，傅雷回国任教于上海美术专科学校，担任校办公室主任，兼教美术史和法文。傅雷在24岁时翻译了《罗丹艺术论》，26岁撰写了《世界美术名作二十讲》，显示出多艺兼通的过人才学。</p>
@@ -25,8 +25,8 @@
 <p>“在政治运动中，他彻底迷失了方向。反对政治运动，他将被政治运动碾碎；支持政治运动，他同样难以幸免于难。在这种情况下，他完全不知道该怎么办。站在时代洪流的风口浪尖，傅雷彷徨无奈，向左走是死路，向右走仿佛早晚要死，原地不动好像也无活路。不能说话也不能沉默，那么剩下的只能是‘自决于人民’了，这也是傅雷夫妇的最终抉择。”</p>
 <p>“身体状况不好或许可以忍受，但译著难以出版就触及了人生的核心问题。他最无法忍受的是生命白白流逝，无法投身自己的事业。他曾经在给傅聪的信中写到，工作是他生理心理的需要，不工作一颗心就无处安放，就感到是不务正业，就对不起自己。身体每况愈下，翻译事业无法继续，经济收入逐渐切断，傅雷的人生陷入了绝望之中。这只不过是下一个政治洪流的序曲，更为癫狂的文化运动正在酝酿之中。这场运动刚一拉开帷幕，傅雷便做出了人生抉择。”<strong><br />
 </strong></p>
-<figure id="attachment_8744186" style="width: 365px" class="wp-caption aligncenter"><img class="size-full wp-image-8744186" src="https://i.epochtimes.com/assets/uploads/2017/01/4.png-e1485329843495.jpg" alt="朱梅馥与儿子傅聪（左）、傅敏（右）（1939年）。（网路图片）" width="365" b="235" /><figcaption class="wp-caption-text">朱梅馥与儿子傅聪（左）、傅敏（右）（1939年）。（网路图片）</figcaption></figure>
-<p><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>风暴</strong></p>
+<figure id="attachment_8744186" aria-describedby="caption-attachment-8744186" style="width: 365px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/01/4.png-e1485329843495.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8744186" src="https://i.epochtimes.com/assets/uploads/2017/01/4.png-e1485329843495.jpg" alt="朱梅馥与儿子傅聪（左）、傅敏（右）（1939年）。（网路图片）" width="365" b="235" /></a><figcaption id="caption-attachment-8744186" class="wp-caption-text">朱梅馥与儿子傅聪（左）、傅敏（右）（1939年）。（网路图片）</figcaption></figure>
+<p><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>风暴</strong></p>
 <p>傅雷的寓所，名为“疾风迅雨楼”。在洒脱不羁的名号背后，翻译巨匠却自比“墙洞里的小老鼠”，难觅安全的洞穴，可见他内心的痛苦迷茫之深。杨绛曾评价他说：“满头棱角，动不动会触犯人又加脾气急躁，止不住要冲撞人，他知道自己不善在世途上圆转周旋，他可以安身的‘洞穴’，只是自己的书斋。”然而，这个书斋，真的能安身立命吗？</p>
 <p>1965年11月，文汇报刊出姚文元的《评新编历史剧&lt;海瑞罢官&gt;》。反右时，傅雷曾经被姚攻击过，因此，这篇文章是一个不祥之兆。1966年上半年，政治运动的风声加紧了。有一天，傅雷对前来探望的好友周熙良说：“如果再来一次一九五七年那样的情况，我是不准备再活的。”</p>
 <p>1966年8月12日，傅雷的孙子凌霄就要过两岁生日了，可是傅聪远在伦敦，父子相见无期。傅雷写道，“想像着我们的孙儿在你们的客厅及厨房里望着我们的照片，从而认识了远方的爷爷奶奶，这情景，又是多么叫人感动！尽管如此，对于能否有一天亲眼看见他，拥抱他，把他搂在怀里，我可一点都不抱希望。”</p>
@@ -50,13 +50,13 @@
 <p>1958年12月，傅聪留学毕业，选择从波兰乘飞机出走英国。傅聪在1980年的一篇回忆录中讲述了当时的心境：“我是被逼上梁山的。1957年整风反右时，我和父亲几乎同时挨整，他在上海，我在北京，我是从波兰被召回国内参加反右整风的。我写了个检查，后来仍被允许回波兰继续学习。我走后，对父亲的批判越来越扩大化了。我在波兰听到很多关于他的传说。1958年12月，我留学毕业，如果我回来，势必是‘父亲揭发儿子，儿子揭发父亲’，可是我和父亲都不会这样做。当时我是被逼上梁山的。当然，对我的出走，我永远是内疚的。”</p>
 <p>傅聪不会忘记，父亲的最后赠言是：“第一做人，第二做艺术家，第三做音乐家，最后才是钢琴家。”</p>
 <p>傅敏的记忆里，埋藏了更多的折磨。每年9月3日，傅敏都会独自一人大哭一场。他说：“我时常在梦里回忆小时候与父母的快乐时光。”傅敏谈到：“1966年6月初，《人民日报》发表社论《横扫一切牛鬼蛇神》。我就直觉，父亲要出事。”形势所迫，傅敏冒死保留了三封父亲来信，把其它信件全部投进马思聪家的大铁炉。当傅敏接到父母亡故的噩耗时，心如刀割，欲哭无泪。</p>
-<p>那时，傅敏在给一位同学的信里，表达了对“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>”的不满，因而被打成了“现行反革命分子”。他被关在北京一中的“土监狱”，全身浮肿，饿得眼冒金星。他几次自杀未成，罪上加罪，因为“反革命”是没有自杀的权利的。他被红卫兵后拖回学校后，接着批斗。一次，傅敏以头撞墙，被送到医院，因其“反革命”的身份，医生缝针时竟然不给他打麻醉药。就这样，缝了十几针，他的头上落下碗口大的伤疤。</p>
+<p>那时，傅敏在给一位同学的信里，表达了对“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>”的不满，因而被打成了“现行反革命分子”。他被关在北京一中的“土监狱”，全身浮肿，饿得眼冒金星。他几次自杀未成，罪上加罪，因为“反革命”是没有自杀的权利的。他被红卫兵后拖回学校后，接着批斗。一次，傅敏以头撞墙，被送到医院，因其“反革命”的身份，医生缝针时竟然不给他打麻醉药。就这样，缝了十几针，他的头上落下碗口大的伤疤。</p>
 <p>1979年4月，傅雷、朱梅馥追悼会举行，主办者为上海市文学艺术界联合会和中国作家协会上海分会。会上宣布，1958年将傅雷划为右派分子是错误的，应予改正；文革中所受诬陷迫害，一律平反昭雪，彻底恢复政治名誉。</p>
 <p>2013年10月27日，在上海福寿园海港陵园，举行了傅雷夫妇骨灰安葬及纪念碑揭幕仪式。洁白的墓碑上刻着《傅雷家书》中的一句话：“赤子孤独了，会创造一个世界。”</p>
 <p>傅敏向父母说：“爸爸妈妈今天你们终于回来了，47年前你们无可奈何地、悲壮地、痛苦地、无限悲愤地离开了这个世界，离开了我们，离开了你们无限热爱的这块土地以及这块土地增长起来的文化事业。但是，你们的心一直活在我们心里，我们永远怀念你们，你们一生的所作所为，你们那颗纯净的赤子之心，永远在激励着我们一定要努力把产生这么个悲剧的根源铲除掉。爸爸妈妈你们在这安息吧。”</p>
-<figure id="attachment_8744173" style="width: 414px" class="wp-caption aligncenter"><img class="size-full wp-image-8744173" src="https://i.epochtimes.com/assets/uploads/2017/01/3-61-e1485329642605.jpg" alt="傅雷遗书（网路图片）" width="414" b="288" /><figcaption class="wp-caption-text">傅雷遗书（网路图片）</figcaption></figure>
+<figure id="attachment_8744173" aria-describedby="caption-attachment-8744173" style="width: 414px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/01/3-61-e1485329642605.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8744173" src="https://i.epochtimes.com/assets/uploads/2017/01/3-61-e1485329642605.jpg" alt="傅雷遗书（网路图片）" width="414" b="288" /></a><figcaption id="caption-attachment-8744173" class="wp-caption-text">傅雷遗书（网路图片）</figcaption></figure>
 <p><strong>结语</strong></p>
-<p>一场史无前例的文化大革命，无情地扫落了中国的文化精英。才华横溢的他们，一个个走向生命的终点，悄无声息，好似一粒小小的石子，投入苦难的海洋，瞬间不见踪影。在政治风暴里，他们保不住一张安静的书桌，摸不到正确的方向。他们不解、迷失、悲愤，累了，厌了。死亡，是告别屈辱和惨烈的解脱。<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%BA%A2%E7%A5%B8.md#1">中共红祸</a>，颠倒是非，迫害良善，扭曲人性，摧毁文化和道德。祸端不除，天下焉得太平。</p>
+<p>一场史无前例的文化大革命，无情地扫落了中国的文化精英。才华横溢的他们，一个个走向生命的终点，悄无声息，好似一粒小小的石子，投入苦难的海洋，瞬间不见踪影。在政治风暴里，他们保不住一张安静的书桌，摸不到正确的方向。他们不解、迷失、悲愤，累了，厌了。死亡，是告别屈辱和惨烈的解脱。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%BA%A2%E7%A5%B8.md#1">中共红祸</a>，颠倒是非，迫害良善，扭曲人性，摧毁文化和道德。祸端不除，天下焉得太平。</p>
 <p>傅雷一家的命运沉浮，映衬着时代的悲凉与荒唐。心灵的伤口，泣血不止，永难平复。与这个家庭一同悲哀并痛着的，是整个中华民族，还有饱经沧桑的大地。回顾，为了让悲剧不再重演，让生命不再迷航。</p>
 <p><strong>参考资料：</strong></p>
 <p>江小燕：《我为何保存傅雷的骨灰？》（原题《致余开传先生》），爱思想网，2004年12月20日。（作者写于1998年1月23日）<br />
@@ -67,55 +67,42 @@
 吴过：《红卫兵档案》。<br />
 李辉：《横扫“牛鬼蛇神”的红卫兵们到底什么样》。#</p>
 <p><span style="color: #800080;"><strong>点击看完整影片：</strong></span></p>
-	<a type='text/javaa' src='//vs.youmaker.com/js/jwplayer/jwplayer8-all.js'></a>
-	<link rel='stylesheet' target="_blank" href='//vs.youmaker.com/css/api2.css' type='text/css' media='all' />
-<div class="video_fit_container"><a ><a href="https://git.io/JvPSw"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a="56.25%" src="//vs.youmaker.com/2018/0708/78269094-95f1-4c55-798c-59edf5765b7b?r=16x9&amp;s=1280x720&api=2&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F17%2F1%2F25%2Fn8744097.md#1"></a></div>
+<div class="video_fit_container epoch_player"><div class="player-container" id="player-container-78269094-95f1-4c55-798c-59edf5765b7b" data-id="player-78269094-95f1-4c55-798c-59edf5765b7b"></div></div><a src="//vs.youmaker.com/assets/player/78269094-95f1-4c55-798c-59edf5765b7b?r=16x9&amp;s=1280x720&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F17%2F1%2F25%2Fn8744097.md#1"></a>
 <p>责任编辑：高义</p>
-
+	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/1/22/n8735098.md#1">高天韵：她为何成了文革“要案”的主角？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/5/n8172698.md#1">张东园：中共迫害文化精英实录（五）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/7/10/n8084246.md#1">张东园：中共迫害文化精英实录（一）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/5/30/n7945083.md#1">石涛：钱钟书“最才的女”杨绛去世“灵魂和肉体的分离”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/6/n3840188.md#1">张东园：揭秘与中共有关的那些人和事（三）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/5/5/n3581727.md#1">吴少华：中华儿女蒙难中原系列（八）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/11/9/14/n3371944.md#1">铁流：百万人自杀 学者揭毛泽东迫害知识精英铁证</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/11/9/12/n3370344.md#1">文革致死“中华精英”名单  震撼网民</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/26/n2976647.md#1">傅国涌：傅雷也有怒目金刚时</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/4/25/n2887746.md#1">林辉：两个钢琴天才的迥异命运</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/3/13/n1643964.md#1">人格与爱的霹雳：傅雷夫妇之死</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/25/n2887746.md#1">林辉：两个钢琴天才的迥异命运</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/26/n2976647.md#1">傅国涌：傅雷也有怒目金刚时</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/9/12/n3370344.md#1">文革致死“中华精英”名单  震撼网民</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/2/n11425658.md#1" target="_blank">李小刚：中国大饥荒饿死3755.8万人？！</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/25/n10809395.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2095376.md#1" target="_blank">法轮功中南海事件真相揭秘</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943151.md#1">美专家：中国恢复正常后或爆发新一波疫情</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945316.md#1">疫情冲击 水果卖不出 批发市场用铲车倒掉</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/1/25/n8744097.htm">傅雷之死──文化名人的文革厄运</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/1/25/n8744097.htm">傅雷之死──文化名人的文革厄运</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/17/1/25/n8744097.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/1/25/n8744097.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
